[project]
name = "maze_env"
version = "0.1.0"
description = """A Farama Gymnasium environment to train your agent to solve mazes."""
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.5"
license = { file = "LICENSE" }
authors = [
    { name = "Roberto Schiavone", email = "hello@robertoschiavone.io" },
]
maintainers = [
    { name = "Roberto Schiavone", email = "hello@robertoschiavone.io" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: pygame"
]
dependencies = [
    "gymnasium >= 0.27.0",
    "labyrinthine >= 0.1.7",
    "numpy >= 1.24.0",
    "pygame >= 2.2.0"
]

[project.urls]
homepage = "https://github.com/robertoschiavone/maze-env"
documentation = "https://github.com/robertoschiavone/maze-env"
repository = "https://github.com/robertoschiavone/maze-env.git"
changelog = "https://github.com/robertoschiavone/maze-env/releases"
